# rewordapp2anki

./: .gitignore  Cargo.toml  README.md  shell.nix
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: 1-new-app.yml
src/: args.rs  db.rs  deck.rs  info.rs  inquire_autocomplete_path.rs  main.rs  query.rs
